@@ -21,6 +21,14 @@ export(msgl.cv)
 export(msgl.lambda.seq)
 export(msgl.standard.config)
 export(msgl.subsampling)
+export(msgl_dense_sgl_fit_R)
+export(msgl_dense_sgl_lambda_R)
+export(msgl_dense_sgl_predict_R)
+export(msgl_dense_sgl_subsampling_R)
+export(msgl_sparse_sgl_fit_R)
+export(msgl_sparse_sgl_lambda_R)
+export(msgl_sparse_sgl_predict_R)
+export(msgl_sparse_sgl_subsampling_R)
 export(subsampling)
 import(Matrix)
 importFrom(methods,as)
