@@ -185,6 +185,58 @@ return(res)
 
 }
 
+#' C interface
+#'
+#' @keywords internal
+#' @export
+msgl_dense_sgl_fit_R <- function(
+  data,
+  block_dim,
+  groupWeights,
+  parameterWeights,
+  alpha,
+  lambda,
+  idx,
+  algorithm.config) {
+  
+  .Call(msgl_dense_sgl_fit, PACKAGE = "msgl",
+        data,
+        block_dim,
+        groupWeights,
+        parameterWeights,
+        alpha,
+        lambda,
+        idx,
+        algorithm.config
+  )
+}
+
+#' C interface
+#'
+#' @keywords internal
+#' @export
+msgl_sparse_sgl_fit_R <- function(
+  data,
+  block_dim,
+  groupWeights,
+  parameterWeights,
+  alpha,
+  lambda,
+  idx,
+  algorithm.config) {
+  
+  .Call(msgl_sparse_sgl_fit, PACKAGE = "msgl",
+        data,
+        block_dim,
+        groupWeights,
+        parameterWeights,
+        alpha,
+        lambda,
+        idx,
+        algorithm.config
+  )
+}
+
 #' Deprecated fit function
 #'
 #' @keywords internal
@@ -243,12 +295,12 @@ msgl <- function(
     beta.org <- t(t(beta[[l]])*1/x.scale)
 
     if( is.null(colnames(beta.org)) ) {
-      beta.org <- cBind(
+      beta.org <- cbind(
         -colSums(t(beta[[l]])*(x.center/x.scale)),
         beta.org
       )
     } else {
-      beta.org <- cBind(
+      beta.org <- cbind(
         Intercept =  -colSums(t(beta[[l]])*(x.center/x.scale)),
         beta.org
       )
