@@ -102,17 +102,17 @@ fit.cv
     ## Models:
     ## 
     ##  Index:  Lambda:  Features:  Parameters:  Error: 
-    ##        1     1.00        1.5         11.1    0.93
-    ##       20     0.88        4.8         32.4    0.74
-    ##       40     0.76        8.8         51.4    0.62
-    ##       60     0.66       11.2         64.8    0.50
-    ##       80     0.58       15.2         87.1    0.41
-    ##      100     0.50       20.5        113.1    0.37
+    ##        1     1.00        1.6         12.1    0.96
+    ##       20     0.88          5         31.9    0.72
+    ##       40     0.76        8.7         51.1    0.62
+    ##       60     0.66       11.1           64    0.56
+    ##       80     0.58       15.7         88.9    0.46
+    ##      100     0.50       21.7        118.5    0.35
     ## 
     ## Best model:
     ## 
     ##  Index:  Lambda:  Features:  Parameters:  Error: 
-    ##       95     0.52       18.8          105    0.37
+    ##       96     0.51       20.8        113.7    0.35
 
 ### Documentation
 
