@@ -1,0 +1,12 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/predict.R
+\name{msgl_dense_sgl_predict_R}
+\alias{msgl_dense_sgl_predict_R}
+\title{C interface}
+\usage{
+msgl_dense_sgl_predict_R(data, beta)
+}
+\description{
+C interface
+}
+\keyword{internal}
