@@ -9,6 +9,7 @@ vignette: >
 ---
 
 ```{r, echo = FALSE}
+set.seed(150)
 pkg_version <- packageVersion("msgl")
 ```
 
